--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -1,7 +1,7 @@
 <!--------------------------------------------------
-  ---------------- Author: Team 1 ------------------
+  ------------=---- Authors: Team 1 ----------------
   ---------- CS673 Software Development ------------
-  ----------------- Term Project -------------------
+  ------------------ Term Project ------------------
   ------------------ Tracking-App ------------------
   -------- MongoDB, Express, React, NodeJS ---------
   ------------------ June 17, 2019 -----------------
