--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -1,8 +1,8 @@
 <!--------------------------------------------------
   ------------=---- Authors: Team 1 ----------------
-  ---------- CS673 Software Development ------------
+  ----------- CS673 Software Development -----------
   ------------------ Term Project ------------------
-  ------------------ Tracking-App ------------------
+  --------------- Tracking-Agile-App ---------------
   -------- MongoDB, Express, React, NodeJS ---------
   ------------------ June 17, 2019 -----------------
   ------------------------------------------------->
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Strength Training App</title>
+    <title>TracKing Agile App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
